--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,19 +21,19 @@ jobs:
       - name: Build, Push and Release a Docker container to render. # custom step name
         uses: gonuit/render-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
         with:
-          # Below you must provide variables for your Heroku app.
+          # Below you must provide variables for your render app.
 
-          # The email address associated with your Heroku account.
+          # The email address associated with your render account.
           # If you don't want to use repository secrets (which is recommended) you can do:
           # email: my.email@example.com
-          email: ${{ secrets.lb5470272@gmail.com }}
+          email: ${{ secrets.RENDER_EMAIL }}
           
-          # Heroku API key associated with provided user's email.
-          # Api Key is available under your Heroku account settings.
-          heroku_api_key: ${{ secrets.rnd_xPCe2TY4lQ3U2STtFqrUccapiQIU }}
+          # render API key associated with provided user's email.
+          # Api Key is available under your render account settings.
+          heroku_api_key: ${{ secrets.RENDER_API_KEY }}
           
           # Name of the heroku application to which the build is to be sent.
-          heroku_app_name: ${{ secrets.Titanic-Survivors}}
+          heroku_app_name: ${{ secrets.RENDER_APP_NAME }}
 
           # (Optional, default: "./")
           # Dockerfile directory.
